[package]
name = "notedown"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version="0.4", features = ["serde"]}
regex = "1.6.0"
glob = "0.3.0"
enum-display-derive = "0.1.1"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
